# Memnarch-rs

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  DockerfileMemnarch  README.md  README.rs  rpi-compile.sh
.github/workflows/: deploy.yml
bot-api/: Cargo.toml
bot-api-types/: Cargo.toml
bot-api-types/src/: lib.rs
bot-api/src/: lib.rs  request_types.rs
json-db/: Cargo.toml
json-db/src/: json_hash_map.rs  lib.rs
pubsub/: Cargo.toml
pubsub/src/: event_handler.rs  events.rs  lib.rs
py-eval/: Cargo.toml
py-eval/src/: main.rs
src/: birthdays.rs  calendar.rs  consts.rs  cron.rs  curse_of_indicision.rs  daemons.rs  events.rs  file_transaction.rs  health_monitor.rs  lib.rs  main.rs  mtg_spoilers.rs  permissions.rs  quiz.rs  reminders.rs  util.rs
src/commands/: bday.rs  calendar.rs  custom.rs  general.rs  interrail.rs  mod.rs  moderation.rs  mtg_spoilers.rs  owner.rs  python.rs  quotes.rs  sfx.rs  tts.rs
src/commands/global/: mod.rs  owner.rs  reminders.rs
src/commands/sfx/: mod.rs  util.rs
src/events/: pubsub.rs
src/features/: api.rs  birthdays.rs  calendar.rs  curse_of_indicision.rs  custom_commands.rs  disconnect_channel.rs  mc.rs  mod.rs  mtg_spoilers.rs  music_channel_broadcast.rs  owner.rs  quiz.rs  quotes.rs
src/features/moderation/: reaction_roles.rs
src/features/reminders/: mod.rs  parser.rs
src/moderation/: reaction_roles.rs
src/prefs/: guild.rs  user.rs
src/reminders/: parser.rs
src/util/: consts.rs  daemons.rs  mod.rs  permissions.rs
