[package]
name = "memnarch-rs"
version = "0.1.0"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
constcat = "0.5"
futures = "0.3"
git-describe = { git = "https://github.com/mendess/git-describe", version = "0.2" }
html-escape = "0.2"
itertools = "0.10"
mtg-spoilers = { git = "https://github.com/mendess/mtg-spoilers" }
nom = "7"
nom-regex = "0.2"
num-traits = "0.2.17"
rand = "0.8"
regex = "1"
reqwest = "0.11"
scryfall = "0.16.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", features = ["collector"] }
simsearch = "0.1.4"
songbird = "0.4"
tempfile = "3"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicase = "2"

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "io-util", "macros", "sync", "tracing"]

[dependencies.actix-web]
version = "4.4.1"
default-features = false
features = ["rustls", "compress-brotli", "compress-gzip", "compress-zstd"]

[dependencies.bot-api-types]
git = "https://github.com/mendess/discord-bot-utils"
rev = "fe2da522e79e100b4d2316e84a190ee40e2427f3"

[dependencies.daemons]
git = "https://github.com/mendess/discord-bot-utils"
rev = "fe2da522e79e100b4d2316e84a190ee40e2427f3"
features = ["cron"]

[dependencies.json-db]
git = "https://github.com/mendess/discord-bot-utils"
rev = "fe2da522e79e100b4d2316e84a190ee40e2427f3"

[dependencies.pubsub]
git = "https://github.com/mendess/discord-bot-utils"
rev = "fe2da522e79e100b4d2316e84a190ee40e2427f3"
features = ["serenity_cache"]

[dev-dependencies]
paste = "1"
proptest = "1"
