[package]
name = "memnarch-rs"
version = "0.1.0"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
constcat = "0.5"
futures = "0.3"
html-escape = "0.2"
itertools = "0.10"
mtg-spoilers = { git = "https://github.com/mendess/mtg-spoilers" }
nom = "7"
nom-regex = "0.2"
num-traits = "0.2.17"
poise = "0.6.1"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
scryfall = { version = "0.21.0", features = ["unknown_variants_slim"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", features = ["collector"] }
simsearch = "0.1.4"
songbird = "0.4"
tempfile = "3"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicase = "2"

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "io-util", "macros", "sync", "tracing"]

[dependencies.actix-web]
version = "4.4.1"
default-features = false
features = ["rustls", "compress-brotli", "compress-gzip", "compress-zstd"]

[dependencies.bot-api-types]
git = "https://github.com/mendess/discord-bot-utils"
rev = "9cc134540e6a23e27bf87274f31bb1b11b7d83f1"

[dependencies.daemons]
git = "https://github.com/mendess/discord-bot-utils"
rev = "9cc134540e6a23e27bf87274f31bb1b11b7d83f1"
features = ["cron"]

[dependencies.json-db]
git = "https://github.com/mendess/discord-bot-utils"
rev = "9cc134540e6a23e27bf87274f31bb1b11b7d83f1"

[dependencies.pubsub]
git = "https://github.com/mendess/discord-bot-utils"
rev = "9cc134540e6a23e27bf87274f31bb1b11b7d83f1"
features = ["serenity_cache"]

[dependencies.mccli]
git = "https://github.com/mendess/experiments"
rev = "426b0662c7990206d98a1ea6c54470da55c384e5"

[dev-dependencies]
paste = "1"
proptest = "1"
