[package]
name = "bot-api"
version = "0.1.0"
authors = ["mendess <pedro.mendes.26@gmail.com>"]
edition = "2021"

[dependencies]
serenity.workspace = true
reqwest.workspace = true
bot-api-types = { path = "../bot-api-types" }

[dependencies.actix-web]
version = "4.1.0"
features = ["rustls", "compress-brotli", "compress-gzip", "compress-zstd"]
default-features = false
