[package]
name = "pubsub"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
daemons.workspace = true
futures.workspace = true
lazy_static.workspace = true
log.workspace = true
serenity.workspace = true
tokio.workspace = true
