[package]
name = "py-eval"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = "0.2.8"
pyo3 = { version = "0.14.5", features = ["auto-initialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
anyhow = "1.0.44"
futures = "0.3.17"

[dependencies.tokio]
version = "1.12.0"
features = ["full"]
