[package]
name = "py-eval"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow.workspace = true
actix-web.workspace = true
futures.workspace = true
pyo3 = { version = "0.14.5", features = ["auto-initialize"] }
serde.workspace = true
serde_json.workspace = true
tracing = "0.1.29"
tracing-subscriber = "0.2.25"

[dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread"]
